--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -73,9 +73,9 @@
                 android:id="@+id/tvCurrentTemp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20C"
+                android:text="20°C"
                 android:textColor="@color/white"
-                android:textSize="65sp"
+                android:textSize="55sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvCity" />
@@ -121,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:background="@null"
-                android:src="@drawable/ic_sync"
+                android:src="@drawable/ic_sync2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tvMaxMin"
                 tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
