create fun button search city. Finish

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,7 +62,7 @@
                 android:id="@+id/tvCity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ufa"
+                android:text="- - -"
                 android:textColor="@color/white"
                 android:textSize="26dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
                 android:id="@+id/tvCurrentTemp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20°C"
+                android:text="- - -"
                 android:textColor="@color/white"
                 android:textSize="55sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
                 android:id="@+id/tvCondition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sunny"
+                android:text="- - -"
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
